--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,7 @@
 # Metadata for your course
 
 title: Hello World JS      # a name for your Learning Lab course
-tagline:        # a short description for your Learning Lab course, displayed on the course catalog
+tagline: A way to say hello to the world using JavaScript    # a short description for your Learning Lab course, displayed on the course catalog
 description:    # a longer description for your Learning Lab course, displayed on the course's landing page
 
 # Repository setup
