--- a/config.yml
+++ b/config.yml
@@ -17,7 +17,8 @@ template:
 
 before:
 - type:  createIssue  # the type of action, full list at https://lab.github.com/docs/actions/
-                # some actions require additional options, those should appear below `type:`
+    title: Welcome
+    body: welcome-text.md             # some actions require additional options, those should appear below `type:`
                 # you can execute multiple actions in the `before` block
 
 # Steps for the course
